--- a/index.html
+++ b/index.html
@@ -63,14 +63,7 @@
 				 </div>
 				</div>
 				<div class="thief-container">
-					<img src="img/thief.svg" alt="thief" class="thief">
-					<div class="thief-text">
-						<div class="thief-red-text">my-s1te.com</div>
-						<div class="thief-red-text">my-site.co</div>
-						<div class="thief-white-text">my-site.com</div>
-						<div class="thief-red-text">mysite.com</div>
-						<div class="thief-red-text">wwwmy-site.com</div>
-					</div>
+					<img src="img/thief-group.svg" alt="thief" class="thief">
 				</div>
 			</div>
 			<div class="footer-mobile">
