--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
 				<div class="step-one">Находим домены, похожие на оригинальный</div>
 				<img src="img/arrow.svg" alt="arrow" class="arrow">
 				<div class="step-two-row">
-					<div class="step-two-row-item">Выявляем <br>потенциально опасные</div>
-					<div class="step-two-row-item">Отслеживаем подозрительную активность</div>
+					<div class="step-two-row-item">
+						<div>
+						Выявляем <br>потенциально опасные</div>
+						</div>
+					<div class="step-two-row-item">
+					 <div>
+					 	Отслеживаем подозрительную активность
+					 </div>
+					</div>
 				</div>
 				<img src="img/arrow.svg" alt="arrow" class="arrow">
 				<div class="step-three-row">
